# apertium-keyboard

./: AUTHORS  INSTALLATION.md  Makefile  README  README.md  apertium-keyboard.pc.in  configure.ac
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: error.model.hfstol
app/src/main/assets/all.ess.morpheme/: labels.txt  small.tflite
app/src/main/assets/all.grn.morpheme/: labels.txt  small.tflite
app/src/main/assets/backup/: converted_model.tflite  english_label.txt  english_model.tflite  labels.txt
app/src/main/java/com/ckirov/tflmkeyboard/: MainActivity.kt  SmartKeyboardApp.kt
app/src/main/java/com/ckirov/tflmkeyboard/hfstol/: ByteArray.java  FlagDiacriticOperation.java  FormatException.java  HfstOptimizedLookup.java  IndexString.java  LetterTrie.java  NoTokenizationException.java  Transducer.java  TransducerAlphabet.java  TransducerHeader.java  TransducerStream.java  UnweightedTransducer.java  WeightedTransducer.java
app/src/main/java/com/ckirov/tflmkeyboard/service/: CandidateView.kt  LatinKeyboard.java  LatinKeyboardView.java  SmartKeyboard.kt
app/src/main/java/org/apertium/keyboard/: MainActivity.kt  SmartKeyboardApp.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/layout/: input.xml  key_preview.xml  keyboard_view.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: method.xml  popup.xml  qwerty.xml  symbols.xml  symbols_shift.xml
gradle/wrapper/: gradle-wrapper.properties
lm/: README.md  reader.py  tflite_test.py  tflm.py  util.py
(+22 files in other folders)
